--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://abhijit4995.github.io/react-portfolio",
   "name": "react-portfolio",
   "version": "0.1.0",
-  "homepage": "https://github.com/abhijit4995/react-portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
